--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,12 @@
         		<category android:name="org.wolink.android.category.SAMPLE_CODE" />
         	</intent-filter>
         </activity>
+        <activity android:name=".media.FeedBackDemo" android:label="Media/FeedBack">
+        	<intent-filter>
+        		<action android:name="android.intent.action.MAIN" />
+        		<category android:name="org.wolink.android.category.SAMPLE_CODE" />
+        	</intent-filter>
+        </activity>
 
     </application>
     <uses-sdk android:minSdkVersion="8" />
