--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,16 @@
         	</intent-filter>
         </activity>
 
+		<!-- service sample -->
+        <activity android:name=".service.ServiceDemoActivity" android:label="Service/ServiceDemo">
+        	<intent-filter>
+        		<action android:name="android.intent.action.MAIN" />
+        		<category android:name="org.wolink.android.category.SAMPLE_CODE" />
+        	</intent-filter>
+        </activity>
+        <activity android:name=".service.ServiceDemoActivity2" android:label="Service/ServiceDemo" />
+        <service android:name=".service.DemoService" android:exported="true" />      
+             		
     </application>
     <uses-sdk android:minSdkVersion="8" />
 
