--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,14 @@
         	</intent-filter>
         </activity>
 
+		<!-- touch sample -->
+        <activity android:name=".touch.MultiTouchDemo" android:label="Touch/MultiTouch">
+        	<intent-filter>
+        		<action android:name="android.intent.action.MAIN" />
+        		<category android:name="org.wolink.android.category.SAMPLE_CODE" />
+        	</intent-filter>
+        </activity>
+		
     </application>
     <uses-sdk android:minSdkVersion="8" />
 
